# ecce

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md
mcp-server/: README.md  package.json
mcp-server/src/: index.ts
src/: agent.rs  config.rs  lib.rs  main.rs  pattern.rs  utils.rs  watcher.rs
src/commands/: mcp.rs  mod.rs
src/commands/agent/: mod.rs
src/commands/api/: mod.rs
src/commands/homo/: mod.rs
src/commands/task/: mod.rs
tests/: integration_tests.rs
