[package]
name = "ecce"
version = "1.0.0-DEV"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
notify = "6.1"
regex = "1.10"
sha2 = "0.10"
tempfile = "3.8"
