[package]
name = "ecce"
version = "1.0.0-DEV"
edition = "2021"

[lib]
name = "ecce"
path = "src/lib.rs"

[[bin]]
name = "ecce"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
anyhow = "1.0"
colored = "2.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1.0", features = ["full"] }
crossterm = "0.27"
notify = "6.1"
regex = "1.10"
sha2 = "0.10"
tempfile = "3.8"

[dev-dependencies]
mockito = "1.2"
serial_test = "3.0"
